<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearViewPlanner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5sp"
    android:layout_marginEnd="5sp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        app:cardCornerRadius="10sp"
        app:cardElevation="7dp">

        <RelativeLayout
            android:id="@+id/pathRelative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_black"
            android:padding="10sp">

            <TextView
                android:id="@+id/positionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="5sp"
                android:layout_marginTop="5sp"
                android:layout_marginEnd="10sp"
                android:layout_marginBottom="5sp"
                android:background="@drawable/border_black"
                android:padding="@dimen/dimen_12sp"
                android:text="1"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:layout_marginEnd="5sp"
                android:layout_toStartOf="@id/deleteTask"
                android:layout_toEndOf="@id/positionText"
                android:text="@string/task"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textTask"
                android:layout_marginTop="8sp"
                android:layout_toStartOf="@id/deleteTask"
                android:layout_toEndOf="@id/positionText"
                android:text="@string/date"
                android:textSize="@dimen/dimen_12sp" />

            <TextView
                android:id="@+id/textTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textDate"
                android:layout_marginTop="8sp"
                android:layout_marginBottom="5sp"
                android:layout_toStartOf="@id/deleteTask"
                android:layout_toEndOf="@id/positionText"
                android:text="@string/time"
                android:textSize="@dimen/dimen_12sp" />

            <ImageView
                android:id="@+id/deleteTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="Delete"
                android:padding="6sp"
                android:src="@drawable/ic_delete"
                app:tint="#F44336"
                tools:ignore="HardcodedText" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/arrowImage"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="Arrow"
        android:padding="6sp"
        android:src="@drawable/arrow_down_ic"
        tools:ignore="HardcodedText" />

</LinearLayout>
